# pv_bess_optimiser

./: .env.example  .gitignore  Makefile  README.md  USER_GUIDE.md  User_Manual.md  document.md  expected_columns.txt  openmeteo_client.py  optimizer_first_try.py  pv_site_configs.csv  pyproject.toml  run_optimization.py  weather_fetcher.py
.gitlab/merge_request_templates/: Default.md
Clock_Divider/: Clock_Divider.xpr
Data/: Data_Model.xlsx  Generated_Data_Model.xlsx  live_price_predictions.csv  merged_dataset.csv  price_data.csv  solar_radiance_15min_forecast.csv
ETL/: ETL.py  README.MD  expected_columns.txt
Prediction/: Data_Model.xlsx  ETL.ipynb  Generated_Data_Model.xlsx  README.MD  README.md  data_pipeline.py  hyperparameter_search.py  lgbm_skforecast_direct_day_ahead_24h_15min.csv  prediction_model.py  report_generator.py  run_sample.py  tft_day_ahead_24h_15min.csv  tft_day_ahead_24h_15min_geo_features.csv  tft_day_ahead_24h_hourly.csv  tft_day_ahead_24h_hourly_rotated.csv  train_script.py  visualize_predictions.ipynb
Prediction/Models/lgbm_recursive_20260306_123625/: feature_importance.csv  metadata.json  metrics.json  model_meta.joblib  predictions.csv
Prediction/Models/xgboost_20260213_101040/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_20260215_150339/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_20260215_192751/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_20260215_194846/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_20260215_195137/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_20260215_202428/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_20260223_170509/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_sample_20260327_102930/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv
Prediction/Models/xgboost_search_20260215_195940/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv  search_results.csv
Prediction/Models/xgboost_search_20260215_202513/: feature_importance.csv  metadata.json  metrics.json  model.json  predictions.csv  search_results.csv
Prediction/plot_exports/: all_splits_predictions_vs_real_by_timestamp.csv  all_splits_predictions_vs_real_by_window.csv  metrics_by_split.csv  metrics_by_split_CV.csv  metrics_by_split_lightgbm_recursive_single_model.csv  metrics_by_split_lightgbm_skforecast.csv  overfit_check.csv  test_predictions_vs_real_by_timestam.csv  test_predictions_vs_real_by_window.csv  train_predictions_vs_real_by_timestamp.csv  train_predictions_vs_real_by_window.csv  validation_predictions_vs_real_by_timestamp.csv  validation_predictions_vs_real_by_window.csv
Prediction/sample_data/: merged_sample.csv
Prediction/tests/: test_prediction_model.py
config_templates/: README.md  example_full_config.json  verbose_test_config.json
data/: historical_daily_2023_2025.csv  historical_hourly_2023_2025.csv
docs/: CODING_STANDARDS.md  pv_configuration.md  pv_implementation_summary.md  pv_quick_reference.md
models/price_prediction/: model.pkl
models/price_prediction/lgbm_recursive_single_model/: recursive_single_model_20260305_183333.joblib  recursive_single_model_20260305_183333_meta.joblib  recursive_single_model_20260305_184053.joblib  recursive_single_model_20260305_184053_meta.joblib  recursive_single_model_20260305_184332.joblib  recursive_single_model_20260305_184332_meta.joblib  recursive_single_model_20260305_184407.joblib  recursive_single_model_20260305_184407_meta.joblib  recursive_single_model_20260305_184629.joblib  recursive_single_model_20260305_184629_meta.joblib  recursive_single_model_20260305_184910.joblib  recursive_single_model_20260305_184910_meta.joblib  recursive_single_model_20260305_185136.joblib  recursive_single_model_20260305_185136_meta.joblib  recursive_single_model_20260305_185338.joblib  recursive_single_model_20260305_185338_meta.joblib  recursive_single_model_20260305_185511.joblib  recursive_single_model_20260305_185511_meta.joblib  recursive_single_model_20260305_192411.joblib  recursive_single_model_20260305_192411_meta.joblib  recursive_single_model_20260305_192724.joblib  recursive_single_model_20260305_192724_meta.joblib  recursive_single_model_20260305_192908.joblib  recursive_single_model_20260305_194149.joblib  recursive_single_model_20260305_194621.joblib  recursive_single_model_20260305_194835.joblib  recursive_single_model_20260305_195143.joblib  recursive_single_model_20260305_195527.joblib  recursive_single_model_20260305_195619.joblib  recursive_single_model_20260305_200302_meta.joblib  (+26 more)
notebooks/eda/: README.md  base_structure.md
results/: battery_detailed_log.csv  battery_detailed_log_verbose_test.csv  optimization_results.csv  optimization_results_verbose_test.csv
scripts/: battery_state_integration_demo.py  example_pv_config_usage.py  example_pv_generation.py  export_pv_configs.py  fetch_weather_data.py  pv_site_configs.csv  pv_site_configs.json  run_price_inference_example.py
src/: __init__.py
src/ors/: __init__.py
tests/: README.md  test_prediction_full_coverage.py  test_pv_config.py
tests/backtesting/: README.md  backtest.py  backtest_detail_1week_perfect_42.csv  backtest_detail_1week_predicted_42.csv  backtest_detail_1week_predicted_42_trace.csv  backtest_detail_4month_perfect_42.csv  backtest_detail_4month_perfect_42_trace.csv  backtest_detail_4month_predicted_42.csv  backtest_detail_4month_predicted_42_trace.csv  backtest_summary_1week_perfect_42.csv  backtest_summary_1week_predicted_42.csv  backtest_summary_4month_perfect_42.csv  backtest_summary_4month_predicted_42.csv  test_backtest.py
tests/unit/: test_run_optimization.py  test_weather_fetcher.py
(+129 files in other folders)
