[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ORS-BESS-Optimizer"
version = "0.1.0"
description = "Battery Energy Storage System (BESS) Intraday Optimizer with PV Integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Team 03"}
]
keywords = ["energy", "optimization", "battery", "storage", "solar", "pv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "pyomo>=6.5.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]
solvers = [
    "highspy>=1.5.0",
    "glpk>=0.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
all = [
    "ors-bess-optimizer[dev,ml,solvers,docs]",
]

[project.urls]
Homepage = "https://gridminds.atlassian.net/wiki/spaces/ab/overview"
Documentation = "https://gridminds.atlassian.net/wiki/spaces/ab/pages/3342581/Documents+Log"
Repository = "https://cseegit.essex.ac.uk/25-26-ce903-sp/25-26_CE903-SP_team03"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ors*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["ors"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
namespace_packages = true
exclude = [
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "pyomo.*",
    "sklearn.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pyomo]
# Pyomo configuration placeholder
solver_manager = "neos"  # Can be changed to local, neos, etc.
default_solver = "glpk"  # Default solver for optimization
