[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ORS-BESS-Optimizer"
version = "0.1.0"
description = "Battery Energy Storage System (BESS) Intraday Optimizer with PV Integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Team 03"}
]
keywords = ["energy", "optimization", "battery", "storage", "solar", "pv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "pyomo>=6.5.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "openmeteo-requests>=1.0.0",
    "requests-cache>=1.0.0",
    "retry-requests>=2.0.0",
    "highspy>=1.5.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "holidays>=0.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]
solvers = [
    "highspy>=1.5.0",
    "glpk>=0.4.7",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
api = [
    "urllib>= 1.26",
]
all = [
    "ors-bess-optimizer[dev,ml,solvers,docs]",
]

[project.urls]
Homepage = "https://gridminds.atlassian.net/wiki/spaces/ab/overview"
Documentation = "https://gridminds.atlassian.net/wiki/spaces/ab/pages/3342581/Documents+Log"
Repository = "https://cseegit.essex.ac.uk/25-26-ce903-sp/25-26_CE903-SP_team03"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ors*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "src/ors/services/prediction/tft_day_ahead_15min_forecasting.ipynb",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | src/ors/services/prediction/tft_day_ahead_15min_forecasting\.ipynb
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = ["src/ors/services/prediction/tft_day_ahead_15min_forecasting.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle – require Google-style docstrings for all public functions/classes
    "ANN", # flake8-annotations – require explicit type annotations on all function defs
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    # --- docstring style choices ---
    "D203",   # conflicts with D211 (no blank line before class docstring); use D211
    "D213",   # conflicts with D212 (summary on first line); use D212 instead
    "D105",   # magic methods (__str__, __repr__ etc.) do not require docstrings
    "D107",   # __init__ is documented via the class docstring
    # --- annotation leniency ---
    "ANN401", # typing.Any is occasionally necessary for external / untyped APIs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # re-exports in __init__ don't need to be "used"
"tests/**" = ["S101", "D", "ANN"] # tests: assert is fine; no docstrings/annotations required
# optimizer.py is a standalone Pyomo MILP script; constraint-rule callbacks are not
# public API functions and Pyomo's model/t arguments have no usable type stubs.
"src/ors/services/optimizer/optimizer.py" = ["D", "ANN"]
# standalone scripts are not importable library code
"scripts/**" = ["D", "ANN"]
"notebooks/**" = ["N806", "B905", "D", "ANN"]  # Statistical names (Q1/Q3/IQR), zip strict=, docstrings and annotations not required in notebooks

[tool.ruff.lint.pydocstyle]
# Use Google convention: requires Args/Returns/Raises/Attributes sections,
# one-line summary on the opening line of the docstring (D212).
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ors"]

[tool.mypy]
python_version = "3.10"
# Tell mypy that source root is src/ so modules are resolved as `ors.*` not `src.ors.*`
mypy_path = ["src"]
# Strict-ish mode: every function definition must carry full annotations.
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# Catch subtle typing mistakes.
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
# Presentation
show_error_codes = true
show_column_numbers = true
pretty = true
namespace_packages = true
exclude = [
    "^build/",
    "^dist/",
    # Pyomo script is a standalone module with no type stubs available
    "src/ors/services/optimizer/optimizer\\.py",
    "src/ors/services/prediction/tft_day_ahead_15min_forecasting\\.ipynb",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "pyomo.*",
    "sklearn.*",
    "scipy.*",
    "xgboost.*",
    "matplotlib.*",
    "openmeteo_requests.*",
    "openmeteo_sdk.*",
    "requests.*",
    "requests_cache.*",
    "retry_requests.*",
    "holidays.*",
    "urllib3.*",
    "dateutil.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openmeteo_sdk.*"]
follow_imports = "skip"

[tool.pyomo]
# Pyomo configuration placeholder
solver_manager = "neos"  # Can be changed to local, neos, etc.
default_solver = "glpk"  # Default solver for optimization
